components/edit-dialog/index.css
@import "/global.css";

form {
	display: grid;
	gap: 20px;
	grid-template-areas: "icon attrs" "actions actions";
	grid-template-columns: auto 1fr;
	padding: 20px;
}

#icon-group {
	grid-area: icon;
	display: flex;
	gap: 10px;
	flex-direction: column;
	align-items: center;
}

#icon-box {
	margin: 10px 20px;
	padding: 16px;
	border-radius: $panel-radius;
	background: white;
	box-shadow: 0 3px 8px rgba(9, 32, 77, 0.12), 0 0 2px rgba(29, 17, 51, 0.2);
}

#favicon {
	display: block;
	width: 48px;
	height: 48px;
}

#field-group {
	grid-area: attrs;
	display: flex;
	gap: 10px;
	flex-direction: column;
}

label {
	font-size: 0.875em;
}

input {
	display: block;
	margin-top: 5px;
	font-size: 1rem;
	padding: 6px;
	width: 280px;
	border-radius: 4px;
	border: solid 1px #ccc
}

#actions {
	grid-area: actions;
	justify-self: right;
}

